Noe ready yet:

[ Add support for new trigger statuses: MODIFIED/NOTSUPORTED ]
[ Something wrong with zabbix_agentd (?) ] 
[ All parameters should contain section "How can be used" in the Manual ]
[ PHP to support non-numeric values ]
[ Support for system[proccount] on FreeBSD ]
[ Patches for PostgreSQL& MySQL ]
[ Common parser (cfg.c) ]

Changes for 1.0beta3:

 - solved problem with getpeername() (Alexei)
 - support for parameter Timeout for zabbix_trapper (Alexei)
 - support for parameter Timeout for zabbix_trapperd (Alexei)
 - support for parameter Timeout for zabbix_agent (Alexei)
 - fixed wrong data in alarms.php (Alexei)
 - swapped warning_on.wav and warning_off.wav (Alexei)
 - support for parameter Timeout for zabbix_agentd (Alexei)
 - support for parameter Timeout for zabbix_suckerd (Alexei)
 - do not refresh screen if displayed all triggers (Alexei)
 - fixed "Send message to" in actions.html (Alexei)
 - support for experimental parameter NoTimeWait (Alexei)
 - diskfree[*] to return free disk space in Kb (Alexei)
 - support for non-numeric parameters (Alexei)
 - common parser function for configuration files (Alexei)
 - added file include/cfg.h and include/cfg.c (Alexei)
 - support for system[uptime] on FreeBSD (Alexei)
 - support for kern[maxfiles] on FreeBSD (Alexei)
 - support for kern[maxproc] on FreeBSD (Alexei)
 - zabbix_trapperd cannot be ran as root (Alexei)
 - added table history_str (Alexei)
 - added column value_type to table items (Alexei)
 - removed(?) support for automake (Alexei)
 - partial support for automake (Alexei)
 - parent process will terminate childs if one of the childs died
 (Alexei)
 - support for PidFile for zabbix_agentd,zabbix_suckerd and
 zabbix_trapperd (Alexei)
 - Zabbix processes will show statuses for ps (FreeBSD,...) (Alexei)
 - changes in AUTHORS (Alexei)
 - added support for IP addresses for SNMP-enabled hosts.
 Thanks to Denis Ustimenko. (Alexei) 
 - commented #define TEST_PARAMETERS in zabbix_agent.c (Alexei)